interface.yaml
apiVersion: v1
kind: Service
metadata:
  name: interface-port
spec:
  type: NodePort
  ports:
  - port: 3000
    name: interface-port
    targetPort: 3000
  selector:
    name: interface
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interface
spec:
  selector:
    matchLabels:
      name: interface
  replicas: 1
  template:
    metadata:
      labels:
        name: interface
    spec:
      containers:
      - name: interface
        image: piotrostr/interface
        ports:
        - containerPort: 3000
