metadata.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metadata-port
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    name: metadata
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metadata
spec:
  selector:
    matchLabels:
      name: metadata
  replicas: 3
  template:
      metadata:
        labels:
          name: metadata
      spec:
        containers:
          - name: metadata
            image: piotrostr/metadata
            ports:
              - containerPort: 80
            resources:
              requests:
                cpu: "200m"
                memory: "128Mi"
              limits:
                cpu: "500m"
                memory: "512Mi"
        imagePullSecrets:
          - name: regcred
        restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: db-port
  labels:
    name: db-port
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    name: db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  selector:
    matchLabels:
      name: db
  replicas: 1
  template:
      metadata:
        labels:
          name: db
      spec:
        volumes:
          - name: db-storage
            persistentVolumeClaim:
              claimName: db-pvc
        containers:
          - name: db-container
            image: redis
            ports:
              - containerPort: 6379
            volumeMounts:
              - mountPath: /data
                name: db-storage
