ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-smplverse
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - metadata.smplverse.xyz
      secretName: metadata-tls
    - hosts:
        - api.smplverse.xyz
      secretName: api-tls
    - hosts:
        - smplverse.xyz
      secretName: interface-tls
  rules:
    - host: metadata.smplverse.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metadata-port
                port:
                  number: 80
    - host: smplverse.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: interface-port
                port:
                  number: 3000
    - host: www.smplverse.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: interface-port
                port:
                  number: 3000
